# acerola-mangadex

./: Cargo.toml  Makefile.toml  README.md
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/core/: archive.rs  chapter.rs  downloader.rs  filesystem.rs  language.rs  manga_link.rs  mod.rs  selection.rs  title.rs
src/data/: mangadex.rs  mod.rs  models.rs
src/infra/: config.rs  error.rs  mod.rs  rate_limit.rs
